# WebServer-C-11

./: .luarc.json  CMakeLists.txt  README.drawio  compile_commands.json  logic.km  xmake.lua
Fd/: Epoll.cpp  Epoll.h  Fd.hpp  Socket.cpp  Socket.h
HTML/: 404.html  index.html  signup.html
Handler/: GET.h  Handler.cpp  Handler.h  Handler_base.h  Handler_impl.cpp  Handler_impl.h
include/: Accepter.h  Buffer.h  Buffer.hpp  Data.hpp  DataStructure.hpp  Epoll.h  Handler.h  Handler_base.h  HttpServer.h  Listener.h  MessageQueue.hpp  Parser.h  Reactor.h  Receiver.h  Relative.drawio  ServerConf.h  Socket.h  Strategy.h  Task.h  TaskQueue.h  ThreadPool.h  WebServer.h  netbase.h  task.hpp
src/: Accepter.cpp  Buffer.cpp  Epoll.cpp  Handler.cpp  HttpServer.cpp  Listener.cpp  Parser.cpp  Reactor.cpp  Receiver.cpp  Socket.cpp  Strategy.cpp  Task.cpp  TaskQueue.cpp  ThreadPool.cpp  WebServer.cpp  main.cpp  netbase.cpp
src/Test/: test_color.cpp
src/Util/: Color.hpp  SingleTon.hpp
